# mr_manipulator

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: system_bringup.launch.py
models/: model.2.0.2.p
mr_manipulator/: action_client.py  hand_drawing.py  image_proc.py  moveit_commander.py  moveit_servo.py  waypoint_transformer.py
mr_manipulator/sign_language_model/: camera.py  data.pickle  interference_classifier.py  model.p  test1.py
sign_language_model/: camera.py  classifier.py  data_augemtation.py  data_collector.py  dataset.py  image_collector.py  inference_classifier.py  interference_classifier.py  requirements.txt  test1.py  train_model.py  validator.py
